#3 fix overflow on mobile

--- a/src/components/forms/SignupForm.module.scss
+++ b/src/components/forms/SignupForm.module.scss
@@ -9,6 +9,7 @@
     font-family: var(--title-font);
     font-size: 4rem;
     margin: 2rem;
+    white-space: nowrap;
   }
 
   p {
