--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    min-height: 100%;
     background: var(--bg);
     font-family: var(--font);
   }
